[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Portraits/1p.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Fonts/Kenney Mini.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 3 )

[node name="HUD" type="Node2D"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 192.0
margin_right = 415.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="HBoxContainer"]
margin_right = 10.0
margin_bottom = 64.0
rect_min_size = Vector2( 10, 64 )
color = Color( 0.533333, 0.776471, 0.576471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait_img" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="UnitTextInfo" type="ColorRect" parent="."]
margin_left = 64.0
margin_right = 192.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitNameLabel" type="RichTextLabel" parent="UnitTextInfo"]
margin_left = 6.0
margin_right = 128.0
margin_bottom = 23.0
rect_scale = Vector2( 0.997867, 0.983615 )
custom_fonts/normal_font = SubResource( 1 )
text = "undef"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitHitpointsLabel" type="RichTextLabel" parent="UnitTextInfo"]
margin_left = 6.0
margin_top = 23.0
margin_right = 128.0
margin_bottom = 46.0
custom_fonts/normal_font = SubResource( 1 )
text = "1/5 hp"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
